# open-proxy

./: LICENSE.txt  README.md  requirements.txt  setup.cfg  setup.py
src/open_proxy/: open_proxy.py
src/open_proxy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_open_proxy.py
