[metadata]
name = open_proxy
version = 0.0.1
author = T.K.Santhosh
author_email = python.santhosh.py@gmail.com
description = Get Free working proxies around the world.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/santhoshtk01/open-proxy
project_urls =
    repository = https://github.com/santhoshtk01/open-proxy
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
    Topic :: Internet :: Proxy Servers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src